--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WardrobeWizz</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <!-- Bootstrap CSS -->
 
 </head>
@@ -12,7 +12,7 @@
     
 <nav>
 
-    <div><img class='logo-black' src="/images/logo-black.png" alt="logo"></div>
+    <div><img class='logo-black' src="./images/logo-black.png" alt="logo"></div>
 <div></div>
 </nav>
 <div class="intro"><h2 class="helloCopy"><span class="italicstyle"> Hello Kate,</span> <br>Looks like its going to rain today!</h1></div>
@@ -45,7 +45,7 @@
       but hey, it's pure CSS magic.
       -->
       <ul id="menu">
-        <a href="#"><li><img class='logo-white' src="/images/logo-white.png" alt="logo"></li></a>
+        <a href="#"><li><img class='logo-white' src="./images/logo-white.png" alt="logo"></li></a>
         <a href="#"><li>Check my past outfits</li></a>
         <li class="menuLine"></li>
         <a href="#"><li>My Wardrobe</li></a>
