--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WardrobeWizz</title>
     <link rel="stylesheet" href="./styles.css">
     <!-- Bootstrap CSS -->
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
     
@@ -15,11 +15,28 @@
     <div><img class='logo-black' src="./images/logo-black.png" alt="logo"></div>
 <div></div>
 </nav>
-<div class="intro"><h2 class="helloCopy"><span class="italicstyle"> Hello Kate,</span> <br>Looks like its going to rain today!</h1></div>
+<div class="weatherIcon"><img src="./images/weather-rain.png" alt="weatherIcon" srcset=""></div>
+<div class="intro"><h2><span class="italicstyle helloCopy">Hello Kate,</span> <br>Looks like its going to rain today!</h1></div>
 <div class="spacerWhite"></div>
-<div></div>
-<div></div>
+<div class="topPadding40"><h3>Ready for your outfit today?</h3></div>
+<form action="">
+<div id="contentStart" class="contentStart">I feel <span role="textbox" contenteditable="true" class="lineInput" type="text" id="feelingInput" name="feelingInput" placeholder="enter how you feel"></span> would like my style to be <span contenteditable="true" role="textbox" class="lineInput" type="text" id="styleInput" name="styleInput" placeholder="enter what style"></span><br>for today.</div>
+<input type="submit" value="Show me today’s outfit" class="mainBtn">
+</form>
+<div class="spacerBlack"></div>
+
+<h4 class="backgroundWhite topPadding100">You past outfits from this week<div class="headingUnderline"></div></h4>
+
+<div class="lastWeekStyle">
+  <div><img src="./images/img-1.png"></div>
+  <div><img src="./images/img-2.png"></div>
+  <div><img src="./images/img-3.png"></div>
+  <div><img src="./images/img-4.png"></div>
+  
+
+</div>
 <footer></footer>
+
 <!--    Menu Item    -->
 
 <div role="navigation">
