--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 <h4 class="backgroundWhite topPadding100">You past outfits from this week<div class="headingUnderline"></div></h4>
 
 <div class="lastWeekStyle">
-  <div><img src="./images/img-1.png"></div>
-  <div><img src="./images/img-2.png"></div>
-  <div><img src="./images/img-3.png"></div>
-  <div><img src="./images/img-4.png"></div>
-  
+  <div class="imgSpacer"><img src="./images/img-1.png"></div>
+  <div class="imgSpacer"><img src="./images/img-2.png"></div>
+  <div class="imgSpacer"><img src="./images/img-3.png"></div>
+  <div class="imgSpacer"><img src="./images/img-4.png"></div>
+
   
 
 </div>
