--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="spacerWhite"></div>
 <div class="topPadding40"><h3>Ready for your outfit today?</h3></div>
 <form action="">
-<div id="contentStart" class="contentStart">I feel <span role="textbox" contenteditable="true" class="lineInput" type="text" id="feelingInput" name="feelingInput" placeholder="enter how you feel"></span> would like my style to be <span contenteditable="true" role="textbox" class="lineInput" type="text" id="styleInput" name="styleInput" placeholder="enter what style"></span><br>for today.</div>
+<div id="contentStart" class="contentStart ">I feel <span class="cursor"></span><span role="textbox" contenteditable="true" class="lineInput" type="text" id="feelingInput" name="feelingInput" placeholder="enter how you feel" ></span> <br>&amp would like my style to be <span class="cursor"></span><span contenteditable="true" role="textbox" class="lineInput" type="text" id="styleInput" name="styleInput" placeholder="enter what style"></span>for today.</div>
 <input type="submit" value="Show me today’s outfit" class="mainBtn">
 </form>
 <div class="spacerBlack"></div>
@@ -28,15 +28,23 @@
 <h4 class="backgroundWhite topPadding100">You past outfits from this week<div class="headingUnderline"></div></h4>
 
 <div class="lastWeekStyle">
-  <div class="imgSpacer"><img src="./images/img-1.png"></div>
-  <div class="imgSpacer"><img src="./images/img-2.png"></div>
-  <div class="imgSpacer"><img src="./images/img-3.png"></div>
-  <div class="imgSpacer"><img src="./images/img-4.png"></div>
+  <div class="imgSpacer"><img src="./images/w-3.jpg"><img src="./images/w-2.jpg"></div>
+  <div class="imgSpacer"><img src="./images/s-10.jpg"><img src="./images/s-8.jpg"></div>
+
 
   
 
 </div>
-<footer></footer>
+<div class="spacerBlackflip"></div>
+<h4 class="backgroundBlack">Get inspired with other styles for raining season<div class="headingUnderline"></div></h4>
+<div class="inspired">
+  <div class="imgSpacer backgroundBlack wider"><img src="./images/inspired1.png"></div>
+</div>
+<div class="paddingLeftRight">
+<div class="spacerBlackFooter"></div>
+<div class="footerContent"><img src="./images/footerContent.png" alt=""></div>
+</div>
+<footer><img src="./images/MenuBar.png" alt=""></footer>
 
 <!--    Menu Item    -->
 
@@ -77,6 +85,7 @@
 </div>
 
 </body>
+<script src="./script.js"></script>
 </html>
 
 
