--- a/clothes.html
+++ b/clothes.html
@@ -22,7 +22,7 @@
 <div class="topPadding40"><h3>Ready for your outfit today?</h3></div>
 <form action="">
 <div id="contentStart" class="contentStart ">I feel <span class="cursor"></span><span role="textbox" contenteditable="true" class="lineInput" type="text" id="feelingInput" name="feelingInput" placeholder="enter how you feel" ></span> <br>&amp would like my style to be <span class="cursor"></span><span contenteditable="true" role="textbox" class="lineInput" type="text" id="styleInput" name="styleInput" placeholder="enter what style"></span>for today.</div>
-<input type="" onclick="window.location.href = './clothes.html';" value="Show me today’s outfit" class="mainBtn" id="getValBtnID">
+<input type="" value="Show me today’s outfit" class="mainBtn" id="getValBtnID">
 </form>
 <div class="spacerBlack"></div>
 
