--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>WardrobeWizz</title>
+    <meta name="viewport" content="minimum-scale=.5, maximum-scale=.5">
+    <title>WardrobeWizz</title>
     <link rel="stylesheet" href="./styles.css">
     <!-- Bootstrap CSS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -44,12 +44,13 @@
 <div class="paddingLeftRight">
 <div class="spacerBlackFooter"></div>
 <div class="footerContent"><img src="./images/footerContent.png" alt=""></div>
+<div class="foooter"><img src="./images/MenuBar.png" alt=""></div>
 </div>
 
 <!--    Menu Item    -->
 
 
-<footer><img src="./images/MenuBar.png" alt=""></footer>
+
 
 <div role="navigation">
   <div id="menuToggle">
@@ -87,6 +88,7 @@
   </div>
 </div>
 <script src="./script.js"></script>
+
 
 </body>
 
